# gift-finder-kz

./: .env.example  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: gifts.py
app/models/: schemas.py
app/services/: ai_picker.py  cache.py
app/templates/: index.html
docs/: CNAME  index.html
tests/: test_ai_picker.py  test_gifts_api.py
